# fanout

./: .coveragerc  .dockerignore  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.env  Dockerfile  Makefile  Pipfile  asgi.py  conftest.py  helm-values.production.secrets.yaml  helm-values.staging.secrets.yaml  kubeconfig-sa.production.secrets.yaml  kubeconfig-sa.staging.secrets.yaml  manage.py  pyproject.toml  pytest.ini  requirements.freeze.txt  schema.graphql  schema.json  setup.cfg  setup.py  wsgi.py
.git-crypt/keys/default/0/: 8E6D1FDB25758D46EC6EA25CC0F88A909C9FAD91.gpg
backend/: __init__.py
backend/apps/users/: admin.py  models.py
backend/apps/users/schema/: mutations.py  queries.py  types.py
backend/settings/: project.py  test_settings.py  urls.py
compose/: build.yml  dev.yml  production.yml
compose/django/: Dockerfile  asgi.sh  entrypoint.sh  requirements.dev.txt  requirements.txt  uwsgi.sh
deploy/: dev.values.yaml
deploy/chart/: .gitignore  Chart.yaml  values.yaml
deploy/chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
deploy/cluster/: gitlab-pull-secret.secrets.yaml  install_ci_serviceaccount.sh
fanout/: celery.py  constants.py  factories.py
fanout/apps/: schema.py
fanout/apps/common/: admin.py  auditlog.py  models.py  tests.py
fanout/apps/content/: admin.py  models.py
fanout/apps/content/migrations/: 0001_initial.py  0002_auto_20221004_1726.py
fanout/apps/content/schema/: mutations.py  queries.py  types.py
fanout/apps/content/tests/: test_models.py
fanout/apps/customers/: admin.py  models.py
fanout/apps/customers/migrations/: 0001_initial.py  0002_auto_20221004_1726.py
fanout/apps/customers/schema/: __init__.py  mutations.py  queries.py  types.py
fanout/apps/federation/: admin.py  factories.py  keys.py  models.py  utils.py
fanout/apps/federation/migrations/: 0001_initial.py  0002_auto_20220623_0320.py  0003_auto_20220703_2105.py  0004_auto_20221004_1740.py
fanout/apps/federation/schema/: queries.py  types.py
fanout/apps/federation/tests/: test_models.py
fanout/apps/users/: admin.py  factories.py  models.py  schema.py
fanout/apps/users/migrations/: 0001_initial.py  0002_medialibrary_medialibraryfile.py
fanout/apps/users/schema/: mutations.graphql  mutations.py  queries.py  types.py
fanout/apps/users/tests/: test_models.py
fanout/apps/utils/: models.py
fanout/apps/utils/views/: health.py
fanout/settings/: __init__.py  project.py  routing.py  schema.py  test_settings.py  urls.py
fanout/utils/: admin.py  models.py
fixtures/demo/: boundcorp.json
frontend/: codegen.yml
frontend/pages/: index.tsx
