[project]
name = "fanout"
version = "0.1.0"
description = "Federated social network"
authors = [
    "Leeward Bound <leeward@boundcorp.net>"
]
license = {text = "MIT"}
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/leewardbound/fanout"
repository = "https://github.com/leewardbound/fanout"
documentation = "https://github.com/leewardbound/fanout"

keywords = ["activitypub", "fediverse", "federated", "social"]

classifiers = [
    "Topic :: Software Development"
]

[tool.setuptools.packages.find]
where = ["fanout"]
include = ["*"]
exclude = []
namespaces = false

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''
