[project]
name = "fanout"
version = "0.1.0"
description = "Federated social network"
authors = [
    {name = "Leeward Bound", email= "leeward@boundcorp.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"

keywords = ["activitypub", "fediverse", "federated", "social"]
dependencies = [
    "django ~= 3.2"
]

classifiers = [
    "Topic :: Software Development"
]

[tool.setuptools.packages.find]
include = ["fanout"]
exclude = ["*.tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''
